# rust-norg

./: .gitignore  CONTRIBUTING.md  Cargo.toml  readme.md  test.txt  test.zig
proptest-regressions/: lib.txt
src/: error.rs  lib.rs  main.rs  stage_1.rs  stage_2.rs  stage_3.rs  stage_4.rs
src/metadata/: mod.rs  stage_1.rs
src/snapshots/: rust_norg__tests__carryover_tags.snap  rust_norg__tests__carryover_tags.snap.new  rust_norg__tests__carryover_tags_tree.snap  rust_norg__tests__carryover_tags_tree.snap.new  rust_norg__tests__definitions.snap  rust_norg__tests__definitions.snap.new  rust_norg__tests__delimiter_mods.snap  rust_norg__tests__delimiting_mods_tree.snap  rust_norg__tests__delimiting_mods_tree.snap.new  rust_norg__tests__footnotes.snap  rust_norg__tests__footnotes.snap.new  rust_norg__tests__headings.snap  rust_norg__tests__headings.snap.new  rust_norg__tests__headings_tree.snap  rust_norg__tests__headings_tree.snap.new  rust_norg__tests__infirm_tags.snap  rust_norg__tests__inline_verbatim.snap  rust_norg__tests__inline_verbatim.snap.new  rust_norg__tests__links.snap  rust_norg__tests__links.snap.new  rust_norg__tests__lists.snap  rust_norg__tests__lists.snap.new  rust_norg__tests__lists_tree.snap  rust_norg__tests__lists_tree.snap.new  rust_norg__tests__modifier_extensions.snap  rust_norg__tests__modifiers.snap  rust_norg__tests__modifiers.snap.new  rust_norg__tests__ordered_lists.snap  rust_norg__tests__ordered_lists.snap.new  rust_norg__tests__paragraphs.snap  rust_norg__tests__paragraphs.snap.new  rust_norg__tests__quotes.snap  (+5 more)
(+4 files in other folders)
